[project]
name = "nirahmq"
version = "0.0.1"
authors = [
    { name="Dionisis Toulatos", email="toulatosdionisis@gmail.com" }
]
description = "A Home Assistant MQTT client library"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pydantic",
    "paho-mqtt"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
